# home-dns-refresh

./: .dockerignore  Cargo.toml  Dockerfile  Makefile.toml  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: release.yml  validate.yml
src/: main.rs  prelude.rs
