[package]
name = "home-dns-refresh"
version = "0.1.2"
edition = "2021"
description = "Looks up the current external IP, and updates an Azure Zone A Record to that IP"
repository = "https://github.com/haribo256/home-dns-refresh"
homepage = "https://github.com/haribo256/home-dns-refresh"
license = "MIT"
readme = "README.md"
keywords = ["cli", "azure", "azure-dns", "dns"]
categories = ["command-line-utilities"]
include = [
    "**/*.rs",
    "Cargo.toml"
]

[dependencies]
log = "0.4.17"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = { version = "1.0.87" }
tokio = { version = "1.21.2", features = ["rt", "macros", "time", "rt-multi-thread"] }
thiserror = { version = "1" }
anyhow = { version = "1" }
reqwest = { version = "0.11", features = ["json"] }
structopt = { version = "0.3" }

[profile.release]
opt-level = "z" 
lto = true
codegen-units = 1
panic = "abort"
strip = "debuginfo"